[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "satosa_openid4vci"
version = "0.1.0"
authors = [{name = "Roland Hedberg", email = "roland@catalogix.se"}]
description = "Credential Issuer as SATOSA front end"
urls = {Homepage = "https://github.com/SUNET/openid4vci"}
license = {text = "Apache 2.0"}
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "openid4v @ git+https://github.com/SUNET/openid4v.git",
    "satosa>=8.0.0",
]
[project.readme]
file = "README.md"
content-type = "text/markdown"

[options]
package_dir = "src"
packages = "find:"
python= "^3.7"

[tool.black]
line-length = 100

[tool.isort]
force_single_line = true
known_first_party = "idpyoidc"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[project.optional-dependencies]
test = [
    "fedservice @ git+https://github.com/SUNET/fedservice.git",
    "idpysdjwt @ git+https://github.com/SUNET/idpy-sdjwt.git",
    "satosa-idpyop @ git+https://github.com/SUNET/satosa-idpy.git"
]
